force-app/main/default/objects/HP_Porte_Feuille_Contrat__c/HP_Porte_Feuille_Contrat__c.object-meta.xml
<CustomObject>
    <label>Portefeuille Contrat Happe</label>
    <nameField>
        <label>Nom du Portefeuille Contrat</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portefeuilles Contrats Happe</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>