force-app/main/default/objects/HP_Porte_Feuille_Contrat__c/fields/HP_Contact__c.field-meta.xml
<CustomField>
    <fullName>HP_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Portefeuilles Contrats Happe</relationshipLabel>
    <relationshipName>HP_Porte_Feuilles_Contrats</relationshipName>
    <type>Lookup</type>
</CustomField>