force-app/main/default/objects/HP_Porte_Feuille_Contrat__c/fields/HP_Souscription_Digital_Id__c.field-meta.xml
<CustomField>
    <fullName>HP_Souscription_Digital_Id__c</fullName>
    <externalId>true</externalId>
    <label>Id Digital Souscription</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>