force-app/main/default/objects/HP_Porte_Feuille_Contrat__c/fields/Xdata_Id__c.field-meta.xml
<CustomField>
    <fullName>Xdata_Id__c</fullName>
    <externalId>true</externalId>
    <label>Id Xdata</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>