force-app/main/default/objects/HP_Porte_Feuille_Contrat__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>HP_Souscription_Digital_Id__c</columns>
    <columns>HP_Contact__c</columns>
    <columns>Xdata_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>