force-app/main/default/objects/HP_Porte_Feuille_Contrat__c/listViews/HP_Tous.listView-meta.xml
<ListView>
    <fullName>HP_Tous</fullName>
    <columns>NAME</columns>
    <columns>HP_Contact__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Xdata_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tous</label>
    <sharedTo>
        <role>HP_HAPPE</role>
    </sharedTo>
</ListView>